Fix button spacing

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -114,6 +114,8 @@ h3 {
 
 .actions {
   margin-top: 20px;
+  display: flex;
+  gap: 4px;
 }
 
 .actions.hide {
